--- a/libasm/Makefile.am
+++ b/libasm/Makefile.am
@@ -34,7 +34,7 @@ VERSION = 1
 
 lib_LIBRARIES = libasm.a
 noinst_LIBRARIES = libasm_pic.a
-noinst_DATA = $(noinst_LIBRARIES:_pic.a=.so)
+noinst_DATA = $(noinst_LIBRARIES:_pic.a=$(SHEXT))
 pkginclude_HEADERS = libasm.h
 
 libasm_a_SOURCES = asm_begin.c asm_abort.c asm_end.c asm_error.c \
@@ -54,7 +54,7 @@ libasm_a_SOURCES = asm_begin.c asm_abort.c asm_end.c asm_error.c \
 libasm_pic_a_SOURCES =
 am_libasm_pic_a_OBJECTS = $(libasm_a_SOURCES:.c=.os)
 
-libasm_so_DEPS = ../lib/libeu.a ../libebl/libebl_pic.a ../libelf/libelf.so ../libdw/libdw.so ../libdwelf/libdwelf.a
+libasm_so_DEPS = ../lib/libeu.a ../libebl/libebl_pic.a ../libelf/libelf$(SHEXT) ../libdw/libdw$(SHEXT) ../libdwelf/libdwelf.a
 libasm_so_LDLIBS = $(libasm_so_DEPS)
 if USE_LOCKS
 libasm_so_LDLIBS += -lpthread
@@ -77,7 +77,7 @@ endif
 
 
 libasm_so_LIBS = libasm_pic.a
-libasm.so: $(srcdir)/libasm.map $(libasm_so_LIBS) $(libasm_so_DEPS)
+libasm$(SHEXT): $(srcdir)/libasm.map $(libasm_so_LIBS) $(libasm_so_DEPS)
 	$(AM_V_CCLD)$(LINK) $(dso_LDFLAGS) -o $@ \
 		$(WL_SONAME) $(WL_VERSION_SCRIPT) \
 		$(NO_UNDEFINED) \
@@ -86,19 +86,19 @@ libasm.so: $(srcdir)/libasm.map $(libasm_so_LIBS) $(libasm_so_DEPS)
 	@$(TEXTREL_CHECK)
 	$(AM_V_at)ln -fs $@ $@.$(VERSION)
 
-install: install-am libasm.so
+install: install-am libasm$(SHEXT)
 	$(mkinstalldirs) $(DESTDIR)$(libdir)
-	$(INSTALL_PROGRAM) libasm.so $(DESTDIR)$(libdir)/libasm-$(PACKAGE_VERSION).so
-	ln -fs libasm-$(PACKAGE_VERSION).so $(DESTDIR)$(libdir)/libasm.so.$(VERSION)
-	ln -fs libasm.so.$(VERSION) $(DESTDIR)$(libdir)/libasm.so
+	$(INSTALL_PROGRAM) libasm$(SHEXT) $(DESTDIR)$(libdir)/libasm-$(PACKAGE_VERSION)$(SHEXT)
+	ln -fs libasm-$(PACKAGE_VERSION)$(SHEXT) $(DESTDIR)$(libdir)/libasm$(SHEXT).$(VERSION)
+	ln -fs libasm$(SHEXT).$(VERSION) $(DESTDIR)$(libdir)/libasm$(SHEXT)
 
 uninstall: uninstall-am
-	rm -f $(DESTDIR)$(libdir)/libasm-$(PACKAGE_VERSION).so
-	rm -f $(DESTDIR)$(libdir)/libasm.so.$(VERSION)
-	rm -f $(DESTDIR)$(libdir)/libasm.so
+	rm -f $(DESTDIR)$(libdir)/libasm-$(PACKAGE_VERSION)$(SHEXT)
+	rm -f $(DESTDIR)$(libdir)/libasm$(SHEXT).$(VERSION)
+	rm -f $(DESTDIR)$(libdir)/libasm$(SHEXT)
 	rmdir --ignore-fail-on-non-empty $(DESTDIR)$(includedir)/elfutils
 
 noinst_HEADERS = libasmP.h symbolhash.h
 EXTRA_DIST = libasm.map
 
-CLEANFILES += $(am_libasm_pic_a_OBJECTS) libasm.so libasm.so.$(VERSION)
+CLEANFILES += $(am_libasm_pic_a_OBJECTS) libasm$(SHEXT) libasm$(SHEXT).$(VERSION)
